scrollbar fix after nav

--- a/Frontend/src/Styling/App.css
+++ b/Frontend/src/Styling/App.css
@@ -1,4 +1,17 @@
-#screen{
+#screen {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100vh;
-    position: relative;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+}
+
+#content{
+        margin-top: 68px; /* Adjust this value based on the height of your navbar */
+        flex-grow: 1;
+        overflow-y: auto;
+    
 }
