--- a/Frontend/src/Styling/Home.css
+++ b/Frontend/src/Styling/Home.css
@@ -4,7 +4,7 @@
 
 /*burde være i % så det variere af skærmstørrelse*/
 .homeRow{
-    height: 540px;
+    height: 532px;
 }
 
 .homeContainer button{
